# ando-ce

./: .env.example  .gitignore  ARCHITECTURE.md  COMPLIANCE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FEATURES.md  LICENSE  README.md  TESTING.md  TODO.md  docker-compose.yml
.github/workflows/: ci.yml
ando-admin/: Cargo.toml  build.rs
ando-admin/src/: dashboard.html  lib.rs  middleware.rs  persist.rs  server.rs
ando-admin/src/handlers/: consumers.rs  dashboard.rs  health.rs  mod.rs  plugins.rs  routes.rs  services.rs  upstreams.rs
ando-admin/tests/: admin_api.rs
ando-core/: Cargo.toml
ando-core/src/: config.rs  consumer.rs  error.rs  lib.rs  plugin_config.rs  route.rs  router.rs  service.rs  ssl.rs  upstream.rs
ando-core/tests/: route_tests.rs  router_tests.rs  upstream_tests.rs
ando-observability/: Cargo.toml
ando-observability/src/: access_log.rs  audit_file_writer.rs  audit_log.rs  lib.rs  logger.rs  metrics.rs  pii_scrubber.rs  prometheus_exporter.rs
ando-observability/tests/: metrics_tests.rs
ando-plugin/: Cargo.toml
ando-plugin/src/: pipeline.rs  plugin.rs  registry.rs
ando-plugin/src/lua/: pool.rs
ando-plugin/tests/: plugin_tests.rs  registry_tests.rs
ando-plugins/: Cargo.toml
ando-plugins/src/: lib.rs
ando-plugins/src/auth/: basic_auth.rs  jwt_auth.rs  key_auth.rs  mod.rs
ando-plugins/src/observability/: mod.rs
ando-plugins/src/security/: ip_restriction.rs
ando-plugins/src/traffic/: cors.rs  ip_restriction.rs  mod.rs  rate_limiting.rs  security_headers.rs
ando-plugins/src/transform/: cors.rs  request_transformer.rs  response_transformer.rs
ando-proxy/: Cargo.toml
ando-proxy/src/: connection.rs  lib.rs  proxy.rs  worker.rs
ando-proxy/tests/: connection_integration.rs  integration.rs
ando-server/: Cargo.toml
ando-server/src/: main.rs
ando-store/: Cargo.toml
ando-store/src/: cache.rs  etcd.rs  lib.rs  schema.rs  watcher.rs
ando-ui/: next.config.ts  package.json
ando-ui/src/app/: globals.css  layout.tsx  page.tsx
ando-ui/src/app/consumers/: page.tsx
ando-ui/src/app/observability/: page.tsx
ando-ui/src/app/plugins/: page.tsx
ando-ui/src/app/routes/: page.tsx
ando-ui/src/app/services/: page.tsx
ando-ui/src/components/: Modal.tsx
ando-ui/src/lib/: api.ts
benchmark/: Dockerfile.echo  README.md  ando-bench.yaml  ando-ce-bench.yaml  bench-native.sh  bench.sh  docker-compose.bench.yml  docker-compose.yml  kong.yml  krakend.json
benchmark/config/ando/: ando.yaml
benchmark/config/apisix/: config.yaml
benchmark/echo-backend/: Cargo.toml  main.go
benchmark/k6/: benchmark.js
benchmark/results/: bench-native.yaml  native_report_20260220_140335.md  native_report_20260220_141119.md  native_wrk_auth_20260220_140335.txt  native_wrk_auth_20260220_141119.txt  native_wrk_baseline_20260220_140335.txt  native_wrk_baseline_20260220_141119.txt  native_wrk_plain_20260220_140335.txt  native_wrk_plain_20260220_141119.txt  native_wrk_stress_20260220_140335.txt  native_wrk_stress_20260220_141119.txt  report_20260220_134606.md  wrk_ando_ramp_250_20260220_134606.txt  wrk_apisix_auth_20260220_134606.txt  wrk_apisix_plain_20260220_134606.txt  wrk_apisix_ramp_1000_20260220_134606.txt  wrk_apisix_ramp_100_20260220_134606.txt  wrk_apisix_ramp_10_20260220_134606.txt  wrk_apisix_ramp_250_20260220_134606.txt  wrk_apisix_ramp_500_20260220_134606.txt  wrk_apisix_ramp_50_20260220_134606.txt  wrk_apisix_stress_20260220_134606.txt
benchmark/scripts/: run_benchmark.sh  setup_routes.sh
benchmark/tyk/: tyk.conf
benchmark/tyk/apps/: bench-auth.json  bench-plain.json
config/: ando.yaml
dashboard/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/consumers/: page.tsx
dashboard/app/plugins/: page.tsx
dashboard/app/routes/: page.tsx
dashboard/app/services/: page.tsx
dashboard/app/settings/: page.tsx
dashboard/app/upstreams/: page.tsx
dashboard/components/: shell.tsx  sidebar.tsx  topbar.tsx  ui.tsx
dashboard/lib/: api.tsx  plugins.ts
deploy/docker/: Dockerfile
lua/ando/: pdk.lua
v1/: ARCHITECTURE.md  QUICKSTART.md
v1/ando-admin/src/: middleware.rs
v1/ando-core/src/: config.rs  consumer.rs  error.rs  route.rs  router.rs  service.rs  ssl.rs
v1/ando-core/tests/: config_tests.rs  error_tests.rs  model_tests.rs  router_tests.rs
v1/ando-observability/src/: logger.rs  metrics.rs
v1/ando-plugin/: Cargo.toml
v1/ando-plugin/src/: lib.rs  pipeline.rs  plugin.rs
v1/ando-plugin/src/lua/: mod.rs  pdk.rs  runtime.rs
v1/ando-plugin/tests/: pipeline_tests.rs
v1/ando-plugins/: Cargo.toml
v1/ando-plugins/src/: lib.rs
v1/ando-plugins/src/auth/: basic_auth.rs
v1/ando-plugins/src/traffic/: limit_count.rs  limit_req.rs
v1/ando-plugins/src/transform/: mod.rs
v1/ando-plugins/tests/: plugin_tests.rs
v1/ando-proxy/: Cargo.toml
v1/ando-proxy/src/: balancer.rs  health_check.rs
v1/ando-proxy/tests/: balancer_tests.rs
v1/ando-server/src/: main.rs
v1/ando-store/tests/: cache_tests.rs  schema_tests.rs
v1/ando-ui/: package-lock.json
v1/benchmark/: Dockerfile.wrk  README.md  ando-bench.yaml  apisix-config.yaml  bench.sh
v1/config/: ando.yaml
v1/deploy/docker/: docker-compose.yml
v1/deploy/edge/: Dockerfile.edge  edge-config.yaml
v1/lua/examples/: custom_auth.lua  hello_world.lua
v2/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
v2/ando-admin/: Cargo.toml
v2/ando-admin/src/handlers/: consumers.rs  health.rs  mod.rs  routes.rs
v2/ando-core/: Cargo.toml
v2/ando-core/src/: config.rs  error.rs  lib.rs  route.rs  router.rs  service.rs  ssl.rs
v2/ando-observability/: Cargo.toml
v2/ando-observability/src/: logger.rs
v2/ando-plugin/: Cargo.toml
v2/ando-plugin/src/: lib.rs  plugin.rs
v2/ando-plugins/: Cargo.toml
v2/ando-proxy/: Cargo.toml
v2/ando-proxy/src/: connection.rs  lib.rs  proxy.rs  worker.rs
v2/ando-server/: Cargo.toml
v2/ando-server/src/: main.rs
v2/ando-store/: Cargo.toml
v2/ando-store/src/: cache.rs
v2/config/: ando.yaml
(+13 files in other folders)
