[workspace]
members = [
    "ando-core",
    "ando-proxy",
    "ando-plugin",
    "ando-store",
    "ando-observability",
    "ando-admin",
    "ando-plugins",
    "ando-server",
    "benchmark/echo-backend",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/kowito/ando"
description = "Ando — Enterprise API Gateway built on Pingora"

[workspace.dependencies]
# Pingora
pingora = "0.7"
pingora-core = "0.7"
pingora-proxy = "0.7"
pingora-http = "0.7"
pingora-load-balancing = "0.7"
pingora-cache = "0.7"
pingora-timeout = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP types
http = "1"
bytes = "1"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# etcd
etcd-client = "0.15"

# Lua scripting
mlua = { version = "0.11", features = ["luajit", "vendored", "async", "serialize", "send"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# HTTP client (for VictoriaMetrics push, etc.)
reqwest = { version = "0.12", features = ["json", "gzip"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
figment = { version = "0.10", features = ["yaml", "env", "toml"] }

# Crypto
jsonwebtoken = "9"
bcrypt = "0.16"
hmac = "0.12"
sha2 = "0.10"

# IP matching
ipnet = "2"

# Async utils
async-trait = "0.1"
dashmap = "6"
arc-swap = "1"
once_cell = "1"
itoa = "1"

# Prometheus metrics
prometheus = { version = "0.13", features = ["process"] }

# Regex
regex = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Allocator — jemalloc reduces contention under multi-threaded workloads
tikv-jemallocator = { version = "0.6", features = ["background_threads"] }

# Matchit router
matchit = "0.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[profile.release-edge]
inherits = "release"
opt-level = "s"

# Bench profile — inherit release but with target-cpu tuning via RUSTFLAGS
[profile.bench]
inherits = "release"
