[workspace]
members = [
    "ando-core",
    "ando-proxy",
    "ando-plugin",
    "ando-plugins",
    "ando-store",
    "ando-observability",
    "ando-admin",
    "ando-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/kowito/ando"
description = "Ando CE — Zero-overhead API Gateway (monoio thread-per-core)"

[workspace.dependencies]
# ── Runtime: monoio (thread-per-core, io_uring on Linux, kqueue on macOS) ──
monoio = { version = "0.2", features = ["macros"] }
monoio-http = "0.3"

# ── Serialization ──
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# ── HTTP types ──
http = "1"
bytes = "1"
httparse = "1"

# ── Logging & tracing ──
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ── Error handling ──
anyhow = "1"
thiserror = "2"

# ── etcd ──
etcd-client = "0.15"

# ── UUID ──
uuid = { version = "1", features = ["v4"] }

# ── HTTP client (admin API, observability push) ──
reqwest = { version = "0.12", features = ["json", "gzip"] }

# ── Time ──
chrono = { version = "0.4", features = ["serde"] }

# ── Config ──
figment = { version = "0.10", features = ["yaml", "env", "toml"] }

# ── Crypto ──
jsonwebtoken = "9"
bcrypt = "0.16"
hmac = "0.12"
sha2 = "0.10"

# ── IP matching ──
ipnet = "2"

# ── Async utils ──
async-trait = "0.1"

# ── Concurrent data structures ──
dashmap = "6"
arc-swap = "1"

# ── Fast integer formatting ──
itoa = "1"

# ── libc (signal handling) ──
libc = "0.2"

# ── Prometheus metrics ──
prometheus = { version = "0.13", features = ["process"] }

# ── Radix router ──
matchit = "0.8"

# ── CLI ──
clap = { version = "4", features = ["derive"] }

# ── Allocator ──
tikv-jemallocator = { version = "0.6", features = ["background_threads"] }

# ── Axum (admin API — runs on tokio, separate from data plane) ──
tokio = { version = "1", features = ["full"] }
axum = "0.8"

# ── Crossbeam channels (SPSC broadcast for config updates) ──
crossbeam-channel = "0.5"

# ── Regex ──
regex = "1"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[profile.release-edge]
inherits = "release"
opt-level = "s"

[profile.bench]
inherits = "release"
