[package]
name = "ando-admin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Admin REST API for Ando CE gateway"

[dependencies]
ando-core = { path = "../ando-core" }
ando-store = { path = "../ando-store" }
ando-plugin = { path = "../ando-plugin" }
ando-plugins = { path = "../ando-plugins" }

serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
arc-swap = { workspace = true }
uuid = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
tempfile = "3"
