[package]
name = "ando-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, config, router for Ando gateway"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
figment = { workspace = true }
matchit = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
ipnet = { workspace = true }
arc-swap = { workspace = true }
chrono = { workspace = true }
