[package]
name = "ando-proxy"
version.workspace = true
edition.workspace = true
description = "Pingora-based proxy engine for Ando API Gateway"

[dependencies]
ando-core = { path = "../ando-core" }
ando-plugin = { path = "../ando-plugin" }
ando-store = { path = "../ando-store" }
ando-observability = { path = "../ando-observability" }
pingora = { workspace = true }
pingora-core = { workspace = true }
pingora-proxy = { workspace = true }
pingora-http = { workspace = true }
pingora-load-balancing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
