[package]
name = "ando-server"
version.workspace = true
edition.workspace = true
description = "Ando API Gateway — main binary"

[[bin]]
name = "ando"
path = "src/main.rs"

[dependencies]
ando-core = { path = "../ando-core" }
ando-proxy = { path = "../ando-proxy" }
ando-plugin = { path = "../ando-plugin" }
ando-store = { path = "../ando-store" }
ando-observability = { path = "../ando-observability" }
ando-admin = { path = "../ando-admin" }
ando-plugins = { path = "../ando-plugins" }
pingora = { workspace = true }
pingora-core = { workspace = true }
pingora-proxy = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
