[package]
name = "ando-store"
version.workspace = true
edition.workspace = true
description = "etcd storage layer for Ando API Gateway"

[dependencies]
ando-core = { path = "../ando-core" }
etcd-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
