[package]
name = "ando-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Metrics & logging for Ando v2 gateway"

[dependencies]
ando-core = { path = "../ando-core" }

serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
prometheus = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
itoa = { workspace = true }
