[package]
name = "ando-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Plugin system for Ando v2 gateway"

[dependencies]
ando-core = { path = "../ando-core" }

serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
