[package]
name = "ando-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "monoio thread-per-core proxy engine for Ando v2"

[dependencies]
ando-core = { path = "../ando-core" }
ando-plugin = { path = "../ando-plugin" }
ando-observability = { path = "../ando-observability" }
ando-store = { path = "../ando-store" }

monoio = { workspace = true }
monoio-http = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
httparse = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
crossbeam-channel = { workspace = true }
itoa = { workspace = true }
prometheus = { workspace = true }
matchit = { workspace = true }
