[package]
name = "ando-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "etcd storage + in-memory cache for Ando v2 gateway"

[dependencies]
ando-core = { path = "../ando-core" }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
etcd-client = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
crossbeam-channel = { workspace = true }
uuid = { workspace = true }
